--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -25,7 +25,7 @@
   <div th:fragment="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Spring eCommerce</a>
+        <a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
 
         <form class="form-inline my-2 my-lg-0" method="post"
               action="#">
@@ -51,37 +51,6 @@
     </nav>
   </div>
 
-
-    <!-- Page Content -->
-    <div class="container">
-
-      <!-- Jumbotron Header -->
-      <header class="jumbotron my-4">
-        <h1 class="display-3">Bienvenido a Spring Ecommerce 2021</h1>
-        <p class="lead">Tu tienda de productos en Línea</p>
-      </header>
-
-      <!-- Page Features -->
-      <div class="row text-center">
-
-        <div class="col-lg-3 col-md-6 mb-4" th:each="producto:${productos}">
-          <div class="card h-100">
-            <img class="card-img-top" th:src="@{/imagenes/{img} (img=${producto.imagen})}" alt="">
-            <div class="card-body">
-              <p class="card-text" th:text="${producto.nombre}"></p>
-            </div>
-            <div class="card-footer">
-              <a href="productohome.html" class="btn btn-success">Ver producto</a>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-      <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
 
     <!-- Footer -->
   <div th:fragment="footer">
