metodo para eliminar producto del carrito

--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -56,12 +56,12 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td >Nombre</td>
-                  <td >Precio</td>
-                  <td>Cantidad</td>
-                  <td >Total</td>
-                  <td><a href="#" class="btn btn-danger">Quitar</a></td>
+                <tr th:each="orden:${cart}">
+                  <td th:text="${orden.nombre}"></td>
+                  <td th:text="${orden.precio}"></td>
+                  <td th:text="${orden.cantidad}"></td>
+                  <td th:text="${orden.total}"></td>
+                  <td><a th:href="@{/delete/cart/{id} (id=${orden.producto.id}) }" class="btn btn-danger">Quitar</a></td>
                 </tr>
               </tbody>
             </table>
@@ -71,7 +71,7 @@
             <h2 class="card-title">SUBTOTAL</h2>
 
             <ul class="list-group">
-              <li class="list-group-item"><h5>Total: $ 10</h5></li>
+              <li class="list-group-item"><h5 th:text="${orden.total}">Total:</h5></li>
               <a href="resumenorden.html" class="btn btn-dark">Ver Orden</a>
             </ul>
           </div>
