--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -72,7 +72,7 @@
 
             <ul class="list-group">
               <li class="list-group-item"><h5 th:text="${orden.total}">Total:</h5></li>
-              <a href="resumenorden.html" class="btn btn-dark">Ver Orden</a>
+              <a th:href="@{/orden}" class="btn btn-dark">Ver Orden</a>
             </ul>
           </div>
 
