--- a/src/main/resources/templates/usuario/resumenorden.html
+++ b/src/main/resources/templates/usuario/resumenorden.html
@@ -50,9 +50,9 @@
               <h5 class="card-title">
                 DATOS ORDEN
               </h5>
-              <h6>Nombre: </h6>
-              <h6 >Correo: </h6>
-              <h6 >Dirección</h6>
+              <h6 th:text=" 'Nombre:'+ ${usuario.nombre}"> </h6>
+              <h6 th:text=" 'Correo:'+ ${usuario.email}"> </h6>
+              <h6 th:text=" 'Dirección:'+ ${usuario.direccion}"></h6>
 
               <h5 class="card-title">
                 PRODUCTOS
@@ -68,11 +68,11 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                     <td >Nombre</td>
-                     <td >Precio</td>
-                     <td>Cantidad</td>
-                     <td >Total</td>
+                    <tr th:each="detorden:${cart}">
+                     <td th:text="${detorden.nombre}"></td>
+                     <td th:text="${detorden.precio}"></td>
+                     <td th:text="${detorden.cantidad}"></td>
+                     <td th:text="${detorden.total}"></td>
 
                    </tr>
                  </tbody>
@@ -87,7 +87,7 @@
           <h2 class="card-title">Resumen Orden</h2>
 
           <ul class="list-group">
-            <li class="list-group-item"><h5> Total:</h5></li>
+            <li class="list-group-item"><h5 th:text=" 'Total:'+${orden.total} "> </h5></li>
             <a href="#" class="btn btn-dark">Generar</a>
           </ul>
         </div>
